fix logo, logout, getting all coversations data

--- a/src/components/containers/home-project/_home-project.sass
+++ b/src/components/containers/home-project/_home-project.sass
@@ -1,6 +1,6 @@
 .home-project
   height: 450px
-  box-shadow: 0 3px 40px rgba(23, 24, 32, 0.2)
+  box-shadow: 0 3px 30px rgba(3, 3, 5, 0.2)
   list-style: none
   margin: 0
   padding: 0
@@ -13,7 +13,7 @@
     display: none
 
 .home-project-title
-  box-shadow: 0 3px 80px rgba(23, 24, 32, 0.2)
+  box-shadow: 0 3px 60px rgba(3, 3, 5, 0.2)
   background-color: #3a3e52
   height: 96px
   border: none
