--- a/src/components/containers/trending-table/_trending-table.sass
+++ b/src/components/containers/trending-table/_trending-table.sass
@@ -6,7 +6,7 @@
   border-top: 1px solid rgba(156, 161, 178, 0.3)
 
 .trending-row
-  box-shadow: 0 3px 80px rgba(23, 24, 32, 0.2)
+  box-shadow: 0 3px 60px rgba(3, 3, 5, 0.2)
   height: 71px
   background: #3a3e52
 
