--- a/src/components/dumb/logo/_logo.sass
+++ b/src/components/dumb/logo/_logo.sass
@@ -5,12 +5,14 @@
   height: 22px
   width: 132px
   margin: 0
+  text-indent: -9999px
+  outline: none
+
+.logo-wrap
+  margin: 1em 2em 1em 0.5em
 
 @media (max-width: 400px)
   .logo
     background-image: url("./graphic/icons/small-logo.png")
     height: 22px
     width: 32px
-
-.logo-wrap
-  margin: 1em 2em 1em 0.5em
