--- a/src/components/dumb/message-content-item/_message-content-item.sass
+++ b/src/components/dumb/message-content-item/_message-content-item.sass
@@ -1,5 +1,5 @@
 .addressee-message
-  box-shadow: 0 0 80px rgba(125, 130, 145, 0.3)
+  box-shadow: 0 0 60px rgba(125, 130, 145, 0.3)
   background-color: #404359
   border-radius: 10px
   border-bottom-left-radius: 0
@@ -13,7 +13,7 @@
   line-height: 28px
 
 .user-message
-  box-shadow: 0 3px 80px rgba(158, 163, 180, 0.3)
+  box-shadow: 0 3px 60px rgba(66, 69, 80, 0.3)
   background-color: #2196f3
   border-radius: 10px
   border-bottom-right-radius: 0
@@ -42,3 +42,8 @@
   justify-content: flex-end
   margin-right: 1em
   flex-wrap: wrap
+
+.message-content-item-date
+  font-size: 14px
+  line-height: 42px
+  color: #9ca1b2
