--- a/src/components/dumb/workflow-item/_workfow-item.sass
+++ b/src/components/dumb/workflow-item/_workfow-item.sass
@@ -1,5 +1,5 @@
 .workflow-item
-  box-shadow: 0 30px 40px rgba(28, 30, 39, 0.3)
+  box-shadow: 0 30px 40px rgba(14, 14, 20, 0.3)
   border-radius: 5px
   background-color: #3a3e52
   margin-bottom: 18px
